working: add task to debug resume